# netflix-dbt

./: .gitignore  commands.sql
.github/workflows/: dagster_cloud_deploy.yml  dbt_ci.yml
airflow/: docker-compose.yml  requirements.txt
airflow/dags/: tmdb_pipeline.py
dagster/: dagster_cloud.yaml  pyproject.toml  requirements.txt
dagster/dagster_project/: __init__.py  assets.py  resources.py  schedules.py
netflix/: dbt_project.yml  package-lock.yml  packages.yml
netflix/analyses/: genre_popularity.sql  top_rated_movies.sql
netflix/models/marts/: dim_movies.sql  dim_tags.sql  fct_genre_ratings.sql  fct_ratings.sql  fct_tag_applications.sql  metricflow_time_spine.sql  schema.yml  semantic_models.yml
netflix/models/staging/: schema.yml  sources.yml  stg_genome_scores.sql  stg_genome_tags.sql  stg_links.sql  stg_movies.sql  stg_ratings.sql  stg_tags.sql
netflix/seeds/: genre_mapping.csv
netflix/snapshots/: snap_dim_movies.sql  snap_raw_movies.sql
netflix/tests/: all_genre_have_display_genre.sql  all_rating_have_movies.sql  assert_valid_rating_range.sql
